readme: add short description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 authors = ["Garrit Franke <garrit@slashdev.space>"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/garritfra/qbe-rs"
-keywords = ["qbe", "compiler"]
-description = "QBE bindings for Rust"
+keywords = ["qbe", "compiler", "ir"]
+description = "QBE IR for Rust"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
